--- a/js/components/TaskList/TaskList.css
+++ b/js/components/TaskList/TaskList.css
@@ -11,6 +11,9 @@
 	padding: 8px 12px;
 	margin-bottom: 10px;
 }
+.content-wrapper .button:last-child {
+	margin-bottom: 0;
+}
 
 /*
  * Действия
@@ -27,7 +30,8 @@
 	margin: 0 0 10px;
 	border: 1px solid  #ccc;
 	border-radius: 5px;
-	padding: 7px 9px;
+	padding: 6px 9px;
+	cursor: pointer;
 }
 .task-item:last-child {
 	margin: 0;
@@ -60,8 +64,19 @@
 .task-item__description {
 	display: none;
 	clear: both;
+	font-style: italic;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+    padding-bottom: 5px;
+	top: 7px;
+	position: relative;
 }
-
+.task-item__date {
+	display: block;
+	text-align: right;
+	margin-top: 15px;
+	color: #999;
+}
 
 .task-item.complete {
 	//background-color: #ccc;
