Выполнение задачи/Откат

--- a/js/app/style.css
+++ b/js/app/style.css
@@ -9,14 +9,14 @@ body {
 }/*
  * Меню навигации
 */
+.navbar-default .navbar-brand {
+	color: #0084EB;
+}
 .navbar {
 	background-color: #fff;
 }/*
- * Список
+ * Контейнер содержимого страницы
 */
-.task-list {
-	margin: 15px 0;
-}
 .content-wrapper .button {
 	min-height: 40px;
 	width: 100%;
@@ -26,6 +26,17 @@ body {
 }
 .content-wrapper .button:last-child {
 	margin-bottom: 0;
+}
+.content-wrapper {
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+			user-select: none;
+}
+/*
+ * Список
+*/
+.task-list {
+	margin: 15px 0;
 }
 
 /*
@@ -72,7 +83,7 @@ body {
 	cursor: pointer;
 }
 .task-item__status:hover {
-	background-color: #f7f7f7;
+	background-color: #e6e6e6;
 }
 .task-item__description {
 	display: none;
@@ -92,7 +103,7 @@ body {
 }
 
 .task-item.complete {
-	//background-color: #ccc;
+	background-color: #EDEDED;
 }
 .task-item.complete .task-item__name {
 	text-decoration: line-through;
@@ -102,6 +113,10 @@ body {
 }#modal input:focus,
 #modal textarea:focus {
 	outline: none !important;
+}
+#modal .button {
+	background-color: #0084EB;
+	border-color: #0084EB;
 }
 #modal textarea {
 	max-width: 100%;
