--- a/js/app/style.css
+++ b/js/app/style.css
@@ -14,6 +14,10 @@ body {
 }
 .navbar {
 	background-color: #fff;
+}
+.navbar .login {
+	margin: 8px 0;
+	width: 100px;
 }/*
  * Контейнер содержимого страницы
 */
@@ -23,6 +27,7 @@ body {
 	font-size: 16px;
 	padding: 8px 12px;
 	margin-bottom: 10px;
+	border-color: #999;
 }
 .content-wrapper .button:last-child {
 	margin-bottom: 0;
@@ -52,7 +57,7 @@ body {
 .task-item {
 	min-height: 40px;
 	margin: 0 0 10px;
-	border: 1px solid  #ccc;
+	border: 1px solid  #999;
 	border-radius: 5px;
 	padding: 6px 9px;
 	cursor: pointer;
@@ -78,7 +83,7 @@ body {
 	width: 26px;
 	height: 26px;
 	max-height: 100%;
-	border: 1px solid #ccc;
+	border: 1px solid #999;
 	border-radius: 5px;
 	cursor: pointer;
 }
