--- a/js/components/TaskList/TaskList.css
+++ b/js/components/TaskList/TaskList.css
@@ -7,6 +7,7 @@
 	font-size: 16px;
 	padding: 8px 12px;
 	margin-bottom: 10px;
+	border-color: #999;
 }
 .content-wrapper .button:last-child {
 	margin-bottom: 0;
@@ -36,7 +37,7 @@
 .task-item {
 	min-height: 40px;
 	margin: 0 0 10px;
-	border: 1px solid  #ccc;
+	border: 1px solid  #999;
 	border-radius: 5px;
 	padding: 6px 9px;
 	cursor: pointer;
@@ -62,7 +63,7 @@
 	width: 26px;
 	height: 26px;
 	max-height: 100%;
-	border: 1px solid #ccc;
+	border: 1px solid #999;
 	border-radius: 5px;
 	cursor: pointer;
 }
